--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
         <title>My awesome web page</title>
     </head>
-<h1>
+<img src="https://avatars2.githubusercontent.com/u/66759451?v=4">
+
 Hello there, awesome person!
     </h1>
     </body>
